# alan_scanner

./: .gitignore  AStar_path_finding.py  Dockerfile  INSTALL.md  docker-compose.yml  flask_api.py  movement_controller.py  position_tracker.py  requirements.txt  turtlebot_frontier_detection.py
.github/: labeler.yml
linux/: Dockerfile  diagnostic.sh  docker-compose.yml  entrypoint.sh  turtlebot2_api.py  turtlebot2_example.py  turtlebot_frontier_detection.py
mac/: docker-compose.mac.yml
my_api/: README.md
stereo_3.0/: app.py  (+4 more)
test_script/: package.xml  setup.cfg  setup.py
test_script/launch/: movement_test.launch.py
test_script/launch/my_api/: README_turtlebot2_api.md
test_script/launch/my_api/linux/: docker-compose.yml  requirements.txt  simple_explorer.py  turtlebot2_example.py
test_script/stereo/: requirements.txt
test_script/stereo/templates/: index.html
test_script/stereo2/: CLAUDE.md  download_models.py  main.py  requirements.txt  stereo_vision.py  test.py
test_script/stereo2/models/: __init__.py  utils.py
test_script/stereo2/static/css/: main.css
test_script/stereo2/static/css/modules/: mapping.css  settings.css
test_script/stereo2/static/js/: main.js
test_script/stereo2/static/js/modules/: calibration.js  code_editor.js  dashboard.js  logs.js  mapping.js  navigation.js  settings.js
test_script/stereo2/templates/: base.html  index.html
test_script/stereo2/templates/partials/: calibration.html  code_editor.html  dashboard.html  mapping.html  navigation.html  settings.html
test_script/turtlebot_movement_test/: movement_controller.py
(+81 files in other folders)
